# lazy_guassian_splatting

./: CMakeLists.txt  LICENSE  README.md  adaptive_densification.hpp  build.sh  colmap_loader.hpp  gausplat.hpp  gsplat_data.hpp  io.hpp  main.cpp  params_to_gaussians.hpp  plot_helper.hpp  render.cpp  spherical_harmonics_coefs.h  ssim.hpp  typedefs.h  utils.hpp
